[package]
name = "libp2prs-runtime"
version = "0.1.0"
license = "MIT"
description = "async-std or tokio"
authors = ["Netwarps Technologies admin@paradeum.com"]
repository = "https://github.com/netwarps/libp2p-rs"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[dependencies]
futures = { version = "0.3.7", features = ["executor", "thread-pool"] }
async-std = { version = "1.6", optional = true}
tokio = { version = "0.2.22", features = ["full"] , optional = true}

[features]
default = ["runtime-tokio"]
runtime-async-std = [ "async-std" ]
runtime-tokio = ["tokio" ]

